--- a/css/template.css
+++ b/css/template.css
@@ -2,6 +2,6 @@ body {
   padding-top: 50px;
 }
 .starter-template {
-  padding: 40px 15px;
-  text-align: center;
+  padding: 10px 15px;
+  /*text-align: center;*/
 }
